[package]
name = "saltwater"
version = "0.3.0"
authors = ["Tanika Claire Mellifont-Young"]
edition = "2024"

[dependencies]
acpi = "6.0.1"
bitflags = "2.10.0"
bootloader_api = "0.11.12"
linked_list_allocator = "0.10.5"
spinning_top = "0.3.0"
x86_64 = "0.15.2"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[dependencies.elf]
version = "0.8.0"
default-features = false
features = ["alloc", "to_str"]

[profile.dev]
panic = "abort"
opt-level = 5

[profile.release]
panic = "abort"
opt-level = 5

[[bin]]
name = "saltwater"
test = false
bench = false
